fix header alignment

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -51,17 +51,16 @@ header.expanded {
   border-radius: 10px;
 }
 
-/* .active-header-link {
-  color: white;
-  background-color: #19B6FF;
-} */
+.prf-hdr-grid-ctr {
+  display: flex;
+}
 
 .prf-hdr-ctr {
   color: #6c6c6c;
   font-size: 36px;
-  margin: 36px;
+  margin: 36px auto;
   display: grid;
-  grid-template-columns: minmax(300px, 25%) auto;
+  grid-template-columns: minmax(250px, 25%) auto;
 }
 
 .prf-hdr-intro > div {
@@ -361,6 +360,7 @@ footer {
     font-size: 24px;
     margin: 16px;
     text-align: center;
+    width: 100%;
   }
 
   .prf-hdr-intro > div {
@@ -373,7 +373,7 @@ footer {
   }
 
   .prf-hdr-social {
-    margin: 16px auto;
+    margin: 0 auto;
   }
 
   .hdr-normal {
